k8s/security/database-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-allow-backend-only
  namespace: bookstore
spec:
  podSelector:
    matchLabels:
      app: mysql
      tier: database
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend
              tier: backend
      ports:
        - protocol: TCP
          port: 3306
